--- a/composer.json
+++ b/composer.json
@@ -15,14 +15,14 @@
   ],
   "require": {
     "php": ">=7.1",
-    "symfony/http-foundation": "~2.8|~3.0|~3.1",
-    "symfony/http-kernel": "~2.8|~3.0|~3.1",
-    "symfony/config": "~2.8|~3.0|~3.1",
-    "symfony/routing": "~2.8|~3.0|~3.1",
-    "symfony/dependency-injection": "~2.8|~3.0|~3.1",
-    "symfony/event-dispatcher": "~2.8|~3.0|~3.1",
-    "symfony/form": "~2.8|~3.0|~3.1",
-    "symfony/options-resolver": "~2.8|~3.0|~3.1",
+    "symfony/http-foundation": "~2.8|~3.0|~3.1|~4.0",
+    "symfony/http-kernel": "~2.8|~3.0|~3.1|~4.0",
+    "symfony/config": "~2.8|~3.0|~3.1|~4.0",
+    "symfony/routing": "~2.8|~3.0|~3.1|~4.0",
+    "symfony/dependency-injection": "~2.8|~3.0|~3.1|~4.0",
+    "symfony/event-dispatcher": "~2.8|~3.0|~3.1|~4.0",
+    "symfony/form": "~2.8|~3.0|~3.1|~4.0",
+    "symfony/options-resolver": "~2.8|~3.0|~3.1|~4.0",
     "swiftmailer/swiftmailer": "~5.4",
     "google/apiclient": ">=2.1"
   },
